--- a/public/styles.css
+++ b/public/styles.css
@@ -289,3 +289,34 @@ img {
   flex-direction: column;
 
 }
+.form-container {
+  width: 80%;
+  margin: 0 auto;
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 5px;
+}
+input[type=text], input[type=email], input[type=tel] {
+  padding: 10px;
+  margin-bottom: 15px;
+  border: none;
+  border-radius: 3px;
+  box-shadow: 0px 1px 3px rgba(0,0,0,0.2);
+}
+
+.submit-button{
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.submit-button:hover {
+  background-color: #3e8e41;
+}
+
+.title-form{
+  text-align: center;
+}
