--- a/public/styles.css
+++ b/public/styles.css
@@ -1,320 +1,337 @@
 @import url("./reset.css");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 body {
-	font-family: "Roboto", sans-serif;
-	background-image: url("./bilder/pizzaback.png");
-	background-repeat: no-repeat;
-	background-size: cover;
+  font-family: 'Roboto', sans-serif;
+  background-image: url("./bilder/pizzaback.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 #root {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-wrap: wrap;
-	gap: 30px;
-	width: 100%;
-	padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 30px;
+  width: 100%;
+  padding: 20px;
 }
+
 
 /* Styles for the firstDiv (menu)   */
 .pizza-menu {
-	background-color: rgba(255, 160, 122, 0.9);
-	border-radius: 10px;
-	width: 250px;
-	height: 762px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  background-color: rgba(255, 160, 122, 0.9);
+  border-radius: 10px;
+  width: 250px;
+  height: 762px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .pizza-item {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;
-	border: 1px solid #ccc;
-	border-radius: 10px;
-	margin: 5px;
-	padding: 20px;
-	width: 220px;
-	height: 25px;
-	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-	background-color: #ffffff;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  margin: 5px;
+  padding: 20px;
+  width: 220px;
+  height: 25px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
 }
 
 .pizza-item:hover {
-	box-shadow: 0 2px 16px rgba(255, 69, 0, 0.5);
-	transform: scale(1.05);
-	transition: box-shadow 0.3s ease, transform 0.3s ease;
+  box-shadow: 0 2px 16px rgba(228, 7, 155, 0.814);
+  transform: scale(1.05);
+  transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
 
 .pizza-item h3 {
-	font-size: 20px;
-	color: #e65100;
-	font-family: "Pacifico", cursive;
+  font-size: 20px;
+  color: #E65100;
+  font-family: 'Pacifico', cursive;
 }
 
 .pizza-item p {
-	font-size: 18px;
-	color: #bf360c;
+  font-size: 18px;
+  color: #BF360C;
 }
 
 /* Styles for the pizza description div */
 .second-container {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .description {
-	width: 661px;
-	height: 500px;
+  width: 661px;
+  height: 639px;
 }
 
 .description__pizza-desc {
-	margin: 20px 0;
-	padding: 10px;
-	border: 1px solid #ccc;
-	border-radius: 5px;
-	background-color: #fff3e0;
+  margin:  auto;
+  /* padding: 10px;
+  border: 1px solid #ccc; */
+  border-radius: 5px;
+  background-color: #FFF3E0;
 }
 
 .description__pizza-desc h2 {
-	font-size: 24px;
-	font-weight: bold;
-	color: #e65100;
-	font-family: "Pacifico", cursive;
-	margin-bottom: 1em;
+  font-size: 24px;
+  font-weight: bold;
+  color: #E65100;
+  font-family: 'Pacifico', cursive;
+  margin-bottom: 1em;
 }
 
 .description__pizza-desc p {
-	font-size: 18px;
-	color: #bf360c;
+  font-size: 18px;
+  color: #BF360C;
 }
 
 .description__pizza-desc .description__price {
-	color: hsl(122, 100%, 40%);
-	font-weight: bold;
+  color: hsl(122, 100%, 40%);
+  font-weight: bold;
 }
 
 .pizza-button {
-	background-color: #ff5722;
-	border-radius: 8%;
+  background-color: #FF5722;
+  border-radius: 8%;
 }
 
 /* Styles for the ingredients div */
 .description__ingredients {
-	margin: 20px 0;
-	padding: 10px;
-	border: 1px solid #ccc;
-	border-radius: 5px;
-	background-color: #f8f8f8;
-	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-	width: 100%;
+  margin: 20px 0;
+  /* padding: 10px;
+  border: 1px solid #ccc; */
+  border-radius: 5px;
+  background-color: #f8f8f8;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  width: 100%;
 }
 
 .description__ingredients h3 {
-	font-size: 20px;
-	font-weight: bold;
-	color: #e65100;
-	font-family: "Pacifico", cursive;
-	margin: 0;
+  font-size: 20px;
+  font-weight: bold;
+  color: #E65100;
+  font-family: 'Pacifico', cursive;
+  margin: 0;
 }
 
 .description__ingredients ul {
-	list-style-type: none;
-	margin: 10px 0;
-	padding: 0;
-	display: flex;
-	flex-wrap: wrap;
-	gap: 5px;
+  list-style-type: none;
+  margin: 10px 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
 }
 
 .description__ingredients li {
-	font-size: 16px;
-	padding: 5px 10px;
-	background-color: #ffe0b2;
-	border-radius: 5px;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  font-size: 16px;
+  padding: 5px 10px;
+  background-color: #FFE0B2;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .description__img {
-	position: relative;
-	width: 130%;
-	height: 312px;
-	overflow: hidden;
-	border-radius: 8px;
-	box-shadow: inset;
+  position: relative;
+  width: 100%;
+  height: 312px;
+  overflow: hidden;
+  border-radius: 8px;
+  box-shadow: inset;
 }
 
 .description__img img {
-	position: relative;
-	left: -20%;
-	width: 100%;
-	height: 100%;
-	object-fit: contain;
+  position: relative;
+  left: -20%;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
+
+
 button {
-	background-color: orange;
-	color: white;
-	padding: 8px 16px;
-	border: none;
-	cursor: pointer;
+  background-color: orange;
+  color: white;
+  padding: 8px 16px;
+  border: none;
+  cursor: pointer;
 }
 
 img {
-	width: 170px;
+  width: 170px;
 }
 
 .hover-effect {
-	box-shadow: 0 9px 16px rgba(115, 239, 27, 0.683);
-	transform: scale(1.05);
-	transition: box-shadow 0.3s ease, transform 0.3s ease;
+  box-shadow: 0 2px 16px rgba(0, 175, 0, 0.683);
+  transform: scale(1.05);
+  transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
 
 /* styling for the order elements  */
 .order {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding: 0.5rem 1rem;
-	border: 1px solid #ddd;
-	border-radius: 0.5rem;
-	margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+  border: 1px solid #ddd;
+  border-radius: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .order-name {
-	font-size: 1.2rem;
-	font-weight: bold;
-	margin-right: 1rem;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-right: 1rem;
 }
 
 .order-price {
-	font-size: 1.2rem;
-	font-weight: bold;
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
 .order-quantity {
-	font-size: 1.2rem;
-	font-weight: bold;
-	margin: 0 1rem;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin: 0 1rem;
 }
 
 .plus-button,
 .minus-button {
-	font-size: 1.2rem;
-	font-weight: bold;
-
-	border-radius: 50%;
-	width: 2rem;
-	height: 2rem;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	cursor: pointer;
-	transition: background-color 0.2s ease-in-out;
+  font-size: 1.2rem;
+  font-weight: bold;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 50%;
+  width: 2rem;
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
 }
 
 .plus-button:hover,
 .minus-button:hover {
-	background-color: #ddd;
+  background-color: #ddd;
 }
 
 .plus-button:active,
 .minus-button:active {
-	background-color: #ccc;
+  background-color: #ccc;
 }
 
 .filter-div :first-child {
-	display: flex;
-	flex-direction: column;
-	background-color: #ffffff;
-	border: 5px solid #23c636;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
-	padding: 20px;
-	border-radius: 10px;
-	font-family: "Pacifico", cursive;
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  border: 5px solid #23c636;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+  padding: 50px;
+  border-radius: 10px;
+  font-family: 'Pacifico', cursive;
+  
+  width: auto;
 }
 
 .filter-div :first-child h2 {
-	margin-top: 0;
-	font-size: 28px;
-	color: #cc1c3f;
-	text-transform: uppercase;
+  margin-top: 0;
+  font-size: 28px;
+  color: #CC1C3F;
+  text-transform: uppercase;
 }
 
 .filter-div :first-child p {
-	margin-bottom: 0;
-	font-size: 18px;
-	color: #333;
-}
-*/ .filter-div :first-child button {
-	margin-top: 20px;
-	padding: 10px 20px;
-	background-color: #cc1c3f;
-	color: #fff;
-	border: none;
-	border-radius: 5px;
-	cursor: pointer;
-	font-size: 18px;
-	text-transform: uppercase;
+  margin-bottom: 0;
+  font-size: 18px;
+  color: #333;
+} */
+
+.filter-div :first-child button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #CC1C3F;
+  color: #FFF;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 18px;
+  text-transform: uppercase;
 }
 
 .filter-div :first-child button:hover {
-	background-color: #eb8518;
-	color: #000000;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+  background-color: #eb8518;
+  color: #000000;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
 }
 .popup-modal {
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	position: absolute;
-	z-index: 10;
-	height: 300px;
-	width: 600px;
-	background-color: #ffffff;
-	box-shadow: 0 0 5px 0 #000000;
-	border-radius: 0.5rem;
-	padding: 1.5rem;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  position: absolute;
+  z-index: 10;
+  height: 521px;
+  width: 620px;
+  background-color: #ffffff;
+  box-shadow: 0 0 5px 0 #000000;
+  border-radius: 0.5rem;
+  padding: 1.5rem;
 }
 .form {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
+
 }
 .form-container {
-	width: 80%;
-	margin: 0 auto;
-	background-color: #f5f5f5;
-	padding: 20px;
-	border-radius: 5px;
+  width: 80%;
+  margin: 0 auto;
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 5px;
 }
-input[type="text"],
-input[type="email"],
-input[type="tel"] {
-	padding: 10px;
-	margin-bottom: 15px;
-	border: none;
-	border-radius: 3px;
-	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
+input[type=text], input[type=email], input[type=tel] {
+  padding: 10px;
+  margin-bottom: 15px;
+  border: none;
+  border-radius: 3px;
+  box-shadow: 0px 1px 3px rgba(0,0,0,0.2);
 }
 
-.submit-button {
-	background-color: #4caf50;
-	color: white;
-	padding: 10px 20px;
-	border: none;
-	border-radius: 3px;
-	cursor: pointer;
+.submit-button{
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
 }
 
 .submit-button:hover {
-	background-color: #3e8e41;
+  background-color: #3e8e41;
 }
 
-.title-form {
-	text-align: center;
+.title-form{
+  text-align: center;
+}
+img {
+  width: 653px;
+  top: -52px;
+  position: relative;
+}
+.checkout-price {
+    color: hsl(122, 100%, 40%);
+    font-weight: bold;
+    align-items: center;
+ 
 }
