--- a/public/styles.css
+++ b/public/styles.css
@@ -4,7 +4,7 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-image: url("./bilder/pizzaback.png");
+  background-image: url("./images/pizzaback.png");
   background-repeat: no-repeat;
   background-size: cover;
  
